# gputoy

./: .gitignore  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  mprocs.yaml  nixpacks.back.toml  nixpacks.front.toml  nixpacks.toml  package-lock.json
.cargo/: config  config.toml
.github/workflows/: pipeline.yaml  rust-basic.yaml
front/: .prettierrc  css-to-json.js  generate_api_types.js  generate_common_types.js  json-to-ts.js  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1663222859967.mjs
front/.svelte-kit/: ambient.d.ts
front/.svelte-kit/adapter-node/: index.js  manifest.js  vite-manifest.json
front/.svelte-kit/adapter-node/chunks/: index.js
front/.svelte-kit/adapter-node/nodes/: 0.js  1.js  2.js  3.js  4.js
front/src/: app.css  app.d.ts  app.html  hooks.server.ts  theme.css
front/src/core/: actions.ts  api.ts  common.ts  completions.ts  console.ts  consts.ts  context.ts  files.ts  icon.ts  input.ts  keys.ts  layout.ts  localstore.ts  preferences.ts  project.ts  runstate.ts  stores.ts  theme.ts  user.ts  util.ts
front/src/core/monaco/: json.ts  light.ts  statusbar.js  wgsl.ts
front/src/ext/: log.ts
front/src/lib/: Counter.svelte  actions.ts  context.ts  vars.ts
front/src/lib/buttons/: IconButton.svelte  (+2 more)
front/src/monaco/: dark.ts  index.ts  json.ts  light.ts  statusbar.js
front/src/routes/: +layout.svelte  +page.svelte
front/src/stores/: auth.ts  enhanced.ts  gpu.ts  input.ts  project.ts  theme.ts  ui.ts  userConfig.ts
front/src/styles/: app.css  split-panes.css  theme.css
front/src/wasm/: common.ts
front/tests/: test.ts
gpu-analyzer/: Cargo.toml
gpu-analyzer/src/: lib.rs
gpu-analyzer/src/analyzer/: json.rs  mod.rs
gpu-analyzer/src/analyzer/dispatch/: macros.rs  mod.rs  store.rs
gpu-analyzer/src/analyzer/process/: export.rs  import.rs  linker.rs  mod.rs  parser.rs
gpu-analyzer/src/analyzer/service/: completions.rs  mod.rs  model_sync.rs  types.rs
gpu-analyzer/src/diagnostics/: error.rs  mod.rs  sink.rs
gpu-analyzer/src/model/: cache.rs  error.rs  mod.rs  service.rs
gpu-analyzer/src/types/: linker.rs  mod.rs  resolver.rs
gpu-analyzer/tests/: dependencies.rs  utils.rs
gpu-analyzer/tests/data/: types.wgsl
gpu-analyzer/tests/data/dependencies/simple/: main.wgsl  types.wgsl
gpu-back/: Cargo.toml
gpu-back/src/: main.rs  util.rs
gpu-back/src/model/: user.rs
gpu-back/src/realm/: error.rs  mod.rs  project.rs  user.rs
gpu-back/src/store/: error.rs  mod.rs  project.rs  user.rs
gpu-back/src/store/model/: project.rs  user.rs
gpu-bindgen/: Cargo.toml  config.toml
gpu-bindgen/src/: main.rs
gpu-client/: Cargo.toml
gpu-client/src/: context.rs  io.rs  lib.rs  resource.rs  runner.rs  vertex.wgsl
gpu-client/src/bundle/: cache.rs  mod.rs  sys.rs  system.rs  viewport.rs
gpu-client/src/client/: client.rs  mod.rs
gpu-client/src/context/: context.rs  mock.rs  mod.rs
gpu-client/src/pipeline/: mod.rs  vertex_fragment.rs
gpu-client/src/resource/: buffer.rs  cache.rs  mod.rs  texture.rs
gpu-client/src/system/: mod.rs  state.rs
gpu-common/: Cargo.toml
gpu-common/proc-macro/: Cargo.toml
gpu-common/proc-macro/src/: case.rs  doc_comment.rs  lib.rs  method.rs  ts.rs
gpu-common/src/: analyzer.rs  compiler.rs  config.rs  error.rs  file.rs  layout.rs  lib.rs  main.rs  method.rs  preferences.rs  project.rs  project_config.rs  schema.rs  user.rs
gpu-common/src/actions/: mod.rs
gpu-common/src/api/: project.rs  user.rs
gpu-common/src/bindgen/: builder.rs  json_to_ts.rs  mod.rs
gpu-common/src/bundle/: mod.rs  system.rs  viewport.rs
gpu-common/src/context/: mod.rs
gpu-common/src/event/: file.rs  mod.rs  resource.rs
gpu-common/src/file/: file_path.rs  mod.rs  path.rs
gpu-common/src/macros/: actions.rs  completions.rs  enums.rs  mod.rs  preference_category.rs
gpu-common/src/naga/: mod.rs
gpu-common/src/realm/: mod.rs  project.rs  user.rs
gpu-common/src/runtime/: completions.rs  mod.rs  parser.rs
gpu-common/src/sys/: bundle.rs  common.rs  delta.rs  mod.rs  naga.rs  pipeline.rs  repo.rs  runner.rs  state.rs  wgpu.rs
gpu-common/src/traits/: complete.rs  describe.rs  mod.rs  parse.rs
gpu-common/src/workspace/: completion.rs  config_value.rs  mod.rs
gpu-common/src/workspace/actions/: args.rs  mod.rs
gpu-common/src/workspace/layout/: mod.rs  region.rs
gpu-common/src/workspace/preferences/: console.rs  editor.rs  mod.rs  schema.rs  workspace.rs
gpu-compiler/: Cargo.toml
gpu-compiler/src/: compiler.rs  error.rs  lib.rs  regex.rs  types.rs  utils.rs  validator.rs
gpu-compiler/test_data/test_imports/: main.wgsl
gpu-compiler/test_data/test_imports/.generated/: main_processed.wgsl
gpu-core/: Cargo.toml
gpu-core/src/: lib.rs
gpu-core/src/context/: mod.rs
gpu-core/src/project/: config.rs  files.rs  mod.rs
gpu-log/: Cargo.toml  log_ext.js
gpu-log/src/: lib.rs
gpu-naga/: Cargo.toml
gpu-schemas/: Cargo.toml
gpu-schemas/src/: main.rs
gpu-tauri/: Cargo.toml
gpu-types/: Cargo.toml
gpu-types/src/: lib.rs
gpu-wasm/: Cargo.toml
gpu-wasm-analyzer/: Cargo.toml
gpu-wasm-analyzer/src/: lib.rs
gpu-wasm-analyzer/src/service/: completions.rs
gpu-wasm-client/: Cargo.toml  client_ext.js
gpu-wasm-client/src/: lib.rs
gpu-wasm-common/: Cargo.toml
gpu-wasm-common/src/: lib.rs
gpu-wasm-compiler/: Cargo.toml
gpu-wasm-compiler/src/: lib.rs
gpu-wasm-logger/: Cargo.toml
gpu-wasm-logger/src/: lib.rs
gpu-wasm/src/: lib.rs
migrations/: 20220913214526_init.up.sql  20220925154343_project.down.sql  20220925154343_project.up.sql  20221024025440_user_config.down.sql  20221024025440_user_config.up.sql
schemas/: Action.json  Config.json  LoginResponse.json  NewUserResponse.json  PrebuildResult.json  Project.json  ProjectResponse.json  ProjectUpsert.json  Runner.json  UpdateUserInfoArgs.json  UserInfoResponse.json  action.json  config.json  credentials.json  new_user.json  project.json  project_reponse.json  project_upsert.json  update_user_info.json  user_info_response.json
templates/: config.bindgen.toml.tmpl
(+122 files in other folders)
