[package]
name = "gpu-bindgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local dependencies
gpu-common = { path = "../gpu-common", features = ["bindgen"] }

# remote dependencies
serde = "1.0.158"
serde_json = "1.0.94"
paste = "1.0.11"
log = "0.4.17"
pretty_env_logger = "0.4.0"
toml = "0.7.4"

[dependencies.schemars]
version = "0.8.11"
features = ["chrono", "preserve_order"]
