[package]
name = "gpu-client"
version = "0.1.0"
edition = "2021"

[features]
default = []
sdk = ["dep:gpu-analyzer", "gpu-log/trace"]

[dev-dependencies]
tokio-test = "0.4.2"

[dependencies]
# local dependencies
gpu-common = { path = "../gpu-common", features = ["wgpu", "serde"] }
gpu-analyzer = { path = "../gpu-analyzer", optional = true }
gpu-log = { path = "../gpu-log" }

# remote dependencies
arrayvec = "0.7.2"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
winit = { version = "0.28.1" }
bytemuck = { version = "1.12.1", features = ["derive"] }
cgmath = " 0.18.0"
js-sys = "0.3.61"
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
wgpu = { version = "0.16.1" }
wee_alloc = { version = "0.4.5", optional = true }
thiserror = "1.0.38"
uuid = { version = "1.1.2", features = ["serde"] }
slotmap = "1.0.6"
chrono = "0.4.23"

web-sys = { version = "0.3.63", features = [
  "Document",
  "Navigator",
  "Node",
  "NodeList",
  "Gpu",
  "GpuAdapter",
  "GpuAddressMode",
  "GpuAutoLayoutMode",
  "GpuBindGroup",
  "GpuBindGroupDescriptor",
  "GpuBindGroupEntry",
  "GpuBindGroupLayout",
  "GpuBindGroupLayoutDescriptor",
  "GpuBindGroupLayoutEntry",
  "GpuBlendComponent",
  "GpuBlendFactor",
  "GpuBlendOperation",
  "GpuBlendState",
  "GpuBuffer",
  "GpuBufferBinding",
  "GpuBufferBindingLayout",
  "GpuBufferBindingType",
  "GpuBufferDescriptor",
  "GpuCanvasContext",
  "GpuCanvasConfiguration",
  "GpuColorDict",
  "GpuColorTargetState",
  "GpuCommandBuffer",
  "GpuCommandBufferDescriptor",
  "GpuCommandEncoder",
  "GpuCommandEncoderDescriptor",
  "GpuCompareFunction",
  "GpuCompilationInfo",
  "GpuCompilationMessage",
  "GpuCompilationMessageType",
  "GpuComputePassDescriptor",
  "GpuComputePassEncoder",
  "GpuComputePipeline",
  "GpuComputePipelineDescriptor",
  "GpuCullMode",
  "GpuDepthStencilState",
  "GpuDevice",
  "GpuDeviceDescriptor",
  "GpuDeviceLostInfo",
  "GpuDeviceLostReason",
  "GpuError",
  "GpuErrorFilter",
  "GpuExtent3dDict",
  "GpuFeatureName",
  "GpuFilterMode",
  "GpuFragmentState",
  "GpuFrontFace",
  "GpuImageCopyBuffer",
  "GpuImageCopyTexture",
  "GpuImageDataLayout",
  "GpuIndexFormat",
  "GpuLoadOp",
  "gpu_map_mode",
  "GpuMipmapFilterMode",
  "GpuMultisampleState",
  "GpuObjectDescriptorBase",
  "GpuOrigin2dDict",
  "GpuOrigin3dDict",
  "GpuOutOfMemoryError",
  "GpuPipelineDescriptorBase",
  "GpuPipelineLayout",
  "GpuPipelineLayoutDescriptor",
  "GpuPowerPreference",
  "GpuPrimitiveState",
  "GpuPrimitiveTopology",
  "GpuProgrammableStage",
  "GpuQuerySet",
  "GpuQuerySetDescriptor",
  "GpuQueryType",
  "GpuQueue",
  "GpuRenderBundle",
  "GpuRenderBundleDescriptor",
  "GpuRenderBundleEncoder",
  "GpuRenderBundleEncoderDescriptor",
  "GpuRenderPassColorAttachment",
  "GpuRenderPassDepthStencilAttachment",
  "GpuRenderPassDescriptor",
  "GpuRenderPassEncoder",
  "GpuRenderPipeline",
  "GpuRenderPipelineDescriptor",
  "GpuRequestAdapterOptions",
  "GpuSampler",
  "GpuSamplerBindingLayout",
  "GpuSamplerBindingType",
  "GpuSamplerDescriptor",
  "GpuShaderModule",
  "GpuShaderModuleDescriptor",
  "GpuStencilFaceState",
  "GpuStencilOperation",
  "GpuStorageTextureAccess",
  "GpuStorageTextureBindingLayout",
  "GpuStoreOp",
  "GpuSupportedFeatures",
  "GpuSupportedLimits",
  "GpuTexture",
  "GpuTextureAspect",
  "GpuTextureBindingLayout",
  "GpuTextureDescriptor",
  "GpuTextureDimension",
  "GpuTextureFormat",
  "GpuTextureSampleType",
  "GpuTextureView",
  "GpuTextureViewDescriptor",
  "GpuTextureViewDimension",
  "GpuUncapturedErrorEvent",
  "GpuUncapturedErrorEventInit",
  "GpuValidationError",
  "GpuVertexAttribute",
  "GpuVertexBufferLayout",
  "GpuVertexFormat",
  "GpuVertexState",
  "GpuVertexStepMode",
  "HtmlCanvasElement",
  "ResizeObserver",
  "OffscreenCanvas",
  "ImageBitmap",
  "ImageBitmapRenderingContext",
  "Window",
] }
