[package]
name = "gpu-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
schemars = { version = "0.8.11", features = ["chrono", "uuid1"] }
uuid = { version = "1.1.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = "0.16.0"
validator_derive = "0.16.0"
strum = "0.24.1"
strum_macros = "0.24.1"
rustc-hash = "1.1.0"
regex = "1.7.0"


[dependencies.naga]
version = "0.10.0"
features = ["serde", "serialize", "deserialize", "wgsl-in"]
