[package]
name = "gpu-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
wgpu = ["dep:wgpu"]
naga = ["dep:naga"]
serialize = ["dep:serde", "uuid/serde", "chrono/serde"]
deserialize = ["dep:serde", "uuid/serde", "chrono/serde"]
schema = ["dep:schemars", "dep:serde_json"]


[dependencies]
uuid = { version = "1.1.2" }
chrono = { version = "0.4" }
validator = "0.16.0"
validator_derive = "0.16.0"
strum = "0.24.1"
strum_macros = "0.24.1"
rustc-hash = "1.1.0"
regex = "1.7.0"
serde = { version = "1.0.144", optional = true }
serde_json = { version = "1.0.88", optional = true }

[dependencies.schemars]
version = "0.8.11"
features = ["chrono"]
optional = true

[dependencies.wgpu]
version = "0.13.1"
optional = true

[dependencies.naga]
version = "0.10.0"
features = ["serde", "serialize", "deserialize"]
optional = true
