[package]
name = "gpu-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
wgpu = ["dep:wgpu"]
naga = ["dep:naga"]
serde = [
    "dep:serde",
    "uuid/serde",
    "chrono/serde",
    "naga?/serde",
    "naga?/serialize",
    "naga?/deserialize",
]
schema = ["dep:schemars", "dep:serde_json", "dep:paste"]
monaco = ["wasm"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "serde", "dep:serde-wasm-bindgen"]
bindgen = ["schema", "serde"]

method = ["wasm"]


[dependencies]
proc-macro = { path = "./proc-macro" }

uuid = { version = "1.1.2" }
chrono = { version = "0.4" }
validator = "0.16.0"
validator_derive = "0.16.0"
strum = "0.24.1"
strum_macros = "0.24.1"
rustc-hash = "1.1.0"
regex = "1.7.0"
bitflags = "2.0.2"
bitflags_serde_shim = "0.2.4"
lazy_static = "1.4.0"
thiserror = "1.0.38"
convert_case = "0.6.0"
logos = "0.12.1"
log = "0.4.17"
displaydoc = "0.2.4"
itertools = "0.10.5"

serde = { version = "1.0.144", optional = true }
serde_json = { version = "1.0.88", optional = true }

[dependencies.wasm-bindgen]
version = "0.2.82"
optional = true

[dependencies.serde-wasm-bindgen]
version = "0.5.0"
optional = true

[dependencies.js-sys]
version = "0.3.59"
optional = true

[dependencies.schemars]
version = "0.8.11"
features = ["chrono", "preserve_order"]
optional = true

[dependencies.wgpu]
version = "0.16.1"
optional = true

[dependencies.naga]
version = "0.11.0"
features = ["wgsl-in"]
optional = true

[dependencies.paste]
version = "1.0.11"
optional = true
