[package]
name = "gpu-schemas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# local dependencies
gpu-common = { path = "../gpu-common" }

# remote dependencies
schemars = "0.8.11"
serde = "1.0.145"
serde_json = "1.0.86"
