[package]
name = "gpu-wasm-client"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 's'

[lib]
crate-type = ["cdylib"]

[dependencies]
# local dependencies
gpu-client = { path = "../gpu-client" }
gpu-common = { path = "../gpu-common", features = ["serialize", "deserialize"] }
gpu-wasm-logger = { path = "../gpu-wasm-logger" }

# crates.io dependencies
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
js-sys = "0.3.59"
log = { version = "0.4.17", features = ["std"] }
serde = { version = "1.0.144", features = ["derive"] }
serde-wasm-bindgen = "0.4"
thiserror = "1.0.4"


[dependencies.web-sys]
version = "=0.3.58"
features = ['console', 'Location', 'HtmlCanvasElement']
