[package]
name = "gpu-wasm-client"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
# local dependencies
gpu-client = { path = "../gpu-client" }
gpu-common = { path = "../gpu-common", features = ["serde"] }
gpu-log = { path = "../gpu-log" }

# crates.io dependencies
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
js-sys = "0.3.61"
log = { version = "0.4.17", features = ["std"] }
serde = { version = "1.0.144", features = ["derive"] }
serde-wasm-bindgen = "0.4"
thiserror = "1.0.38"

[dependencies.web-sys]
version = "0.3.61"
features = ['console', 'Location', 'HtmlCanvasElement']
