[package]
name = "gpu-wasm-compiler"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 's'

[lib]
crate-type = ["cdylib"]

[dependencies]
# local dependencies
gpu-compiler = { path = "../gpu-compiler" }
gpu-common = { path = "../gpu-common" }

# crates.io dependencies
wasm-bindgen = "0.2.82"
wasm-bindgen-futures = "0.4.32"
js-sys = "0.3.59"
log = "0.4.17"
console_log = "0.2.0"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.144", features = ["derive"] }
serde-wasm-bindgen = "0.4"
ron = "0.8.0"
lazy_static = "1.4.0"
serde_json = "1.0.85"
thiserror = "1.0.4"
