[package]
name = "gpu-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# local dependencies
gpu-types = { path = "../gpu-types" }
gpu-naga = { path = "../gpu-naga" }
gpu-core = { path = "../gpu-core" }

# crates.io dependencies
wasm-bindgen = "0.2.82"
js-sys = "0.3.59"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.144", features = ["derive"] }
ron = "0.8.0"
lazy_static = "1.4.0"
serde_json = "1.0.85"

[dependencies.web-sys]
version = "0.3.59"
features = ['console', 'Location', 'HtmlCanvasElement']
